syntax = "proto3";

package Protocol;

enum InfoType {
  HEART_BEAT = 0;

  CTS_NORMAL = 1;
  CTS_FILE = 2;

  STC_NORMAL = 3;
  STC_FILE = 4;

  CTC_NORMAL = 5;
  CTC_FILE = 6;
}

enum DataPriority {
  HIGH = 0;
  MEDIUM = 1;
  LOW = 2;
}

message CommunicationData {
  string message = 1;
  InfoType info_type = 2;
  int32 seq_num = 3;
  int32 ack_num = 4;
  DataPriority priority = 5;
  int32 sourceid = 6;
  int32 targetid = 7;

  // File transfer fields
  string file_id = 8;
  string file_name = 9;
  int64 file_size = 10;
  int32 chunk_index = 11;
  int32 total_chunks = 12;
  bytes chunk_data = 13;
  string md5_hash = 14;
  string chunk_md5 = 15;
}

message ProtocolHeader {
  uint32 version = 1;
  bytes reserved = 2;
  uint32 message_length = 3;
}

message ProtocolPacket {
  ProtocolHeader header = 1;
  CommunicationData data = 2;
  uint32 checksum = 3;
}